<resources>
    <string name="app_name">Игровой чат</string>
    <string name="menu_home">Главная</string>
    <string name="menu_chats">Чат</string>
    <string name="menu_solver">Решатель</string>
    <string name="menu_solver_auto">Auto решатель</string>
    <string name="menu_engine">Движок</string>
    <string name="menu_engine_native">Движок Native</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_encounter_auth">EN Авторизация</string>
    <string name="menu_server_settings">Настройки сервера</string>
    <string name="home_title">Игровой чат</string>
    <string name="home_subtitle">Откройте меню и выберите раздел</string>
    <string name="chat_display_name_with_room">Комната: %2$s | Вы: %1$s</string>
    <string name="settings_server_url_hint">URL сервера (например, http://46.101.168.241:8080)</string>
    <string name="settings_room_hint">Комната (например, общая)</string>
    <string name="settings_enc_game_id_hint">ID игры Encounter</string>
    <string name="settings_save_server">Сохранить настройки сервера</string>
    <string name="settings_clear_room_history">Очистить историю комнаты</string>
    <string name="settings_clear_room_selector_hint">Комната для очистки истории</string>
    <string name="settings_allowed_nicks_title">Разрешенные ники</string>
    <string name="settings_allowed_nick_hint">Ник Encounter</string>
    <string name="settings_allowed_nick_add">Добавить</string>
    <string name="settings_allowed_nick_remove">Удалить</string>
    <string name="settings_allowed_nicks_empty">Список пуст. Доступ открыт всем.</string>
    <string name="settings_saved">Настройки сохранены</string>
    <string name="server_settings_saved">Настройки сервера сохранены</string>
    <string name="server_settings_saved_room">Активная комната изменена: %1$s</string>
    <string name="server_settings_save_error">Ошибка сохранения настроек сервера: %1$s</string>
    <string name="room_history_cleared">История комнаты очищена: %1$s</string>
    <string name="room_history_clear_error">Не удалось очистить историю комнаты: %1$s</string>
    <string name="room_history_room_not_selected">Выберите комнату из списка</string>
    <string name="admin_section_title">Доступ администратора</string>
    <string name="admin_pin_hint">PIN администратора</string>
    <string name="admin_login">Войти как администратор</string>
    <string name="admin_logout">Выйти из режима администратора</string>
    <string name="admin_status_on">Режим администратора включен</string>
    <string name="admin_status_off">Режим администратора выключен</string>
    <string name="admin_login_success">Доступ администратора получен</string>
    <string name="admin_login_error">Неверный PIN администратора</string>
    <string name="admin_logout_success">Режим администратора выключен</string>
    <string name="admin_access_denied">Настройки сервера доступны только администраторам.</string>
    <string name="chat_message_hint">Введите сообщение</string>
    <string name="solver_message_hint">Введите сообщение</string>
    <string name="solver_send">Отправить</string>
    <string name="solver_mode_button_template">Режим %1$s ▼</string>
    <string name="solver_mode_1">Анаграмма</string>
    <string name="solver_mode_2">Ассоциации</string>
    <string name="solver_mode_3">Маска</string>
    <string name="solver_mode_8">Анаграмма из 2 слов</string>
    <string name="solver_mode_9">Маска + слово</string>
    <string name="solver_mode_10">Словоген</string>
    <string name="solver_mode_11">Плюсограмма</string>
    <string name="solver_mode_12">Метаграммы</string>
    <string name="solver_mode_13">Брюква</string>
    <string name="solver_mode_14">Логогрифы</string>
    <string name="solver_mode_15">Общая часть</string>
    <string name="solver_mode_16">Все форматы</string>
    <string name="solver_mode_17">Римские числа</string>
    <string name="solver_mode_18">Прилагательные</string>
    <string name="solver_mode_19">Существительные</string>
    <string name="solver_mode_20">ГаПоИФиКа</string>
    <string name="solver_mode_21">Системы счисления</string>
    <string name="solver_mode_22">Подслова</string>
    <string name="solver_mode_23">Надслова</string>
    <string name="solver_mode_24">Сборка</string>
    <string name="solver_mode_25">Сборка 1 строки</string>
    <string name="solver_mode_26">Шифр Виженера</string>
    <string name="solver_mode_27">Шифр Цезаря</string>
    <string name="solver_mode_28">Азбука Морзе</string>
    <string name="solver_mode_29">Бэкон</string>
    <string name="solver_mode_30">Бодо</string>
    <string name="solver_mode_31">Двоичка</string>
    <string name="solver_mode_32">Азбука Брайля</string>
    <string name="solver_mode_33">Цифры по алфавиту</string>
    <string name="solver_mode_34">Таблица Менделеева</string>
    <string name="solver_mode_35">Регионы России</string>
    <string name="solver_mode_36">Расчлененка</string>
    <string name="solver_mode_37">Ноты</string>
    <string name="solver_mode_4">Книги</string>
    <string name="solver_mode_5">Фильмы</string>
    <string name="solver_mode_6">Картины</string>
    <string name="solver_mode_7">Фразеологизмы</string>
    <string name="solver_mode_switched_message">Режим переключен: %1$s</string>
    <string name="solver_mode_command_unknown">Неизвестная команда режима</string>
    <string name="solver_auto_label">Auto</string>
    <string name="solver_welcome_message">Экран решателя готов. Дальше добавим логику работы.</string>
    <string name="solver_load_more_50">Показать еще 50</string>
    <string name="chat_send">Отправить</string>
    <string name="chat_attach_image">Прикрепить изображение</string>
    <string name="chat_pick_image">Выберите источник изображения</string>
    <string name="chat_pick_image_gallery">Галерея</string>
    <string name="chat_pick_image_camera">Камера</string>
    <string name="chat_image_prepare_error">Не удалось подготовить изображение: %1$s</string>
    <string name="chat_image_upload_error">Ошибка загрузки изображения: %1$s</string>
    <string name="chat_action_delete">Удалить сообщение</string>
    <string name="chat_delete_error">Не удалось удалить сообщение: %1$s</string>
    <string name="chat_welcome_message">Чат запущен. Отправьте первое сообщение.</string>
    <string name="loading_history">Загрузка истории…</string>
    <string name="history_load_error">Ошибка загрузки истории: %1$s</string>
    <string name="room_switched_notice">Комната переключена на: %1$s</string>
    <string name="sending_message">Отправка…</string>
    <string name="message_sent_status">Отправлено. Ответ сервера: %1$s</string>
    <string name="message_send_error">Ошибка отправки: %1$s</string>
    <string name="error_empty_message">Сообщение не может быть пустым</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="drawer_open">Открыть меню навигации</string>
    <string name="drawer_close">Закрыть меню навигации</string>
    <string name="enc_title">Авторизация Encounter</string>
    <string name="enc_site_hint">Адрес сайта Encounter</string>
    <string name="enc_login_hint">Логин</string>
    <string name="enc_password_hint">Пароль</string>
    <string name="enc_login_button">Войти</string>
    <string name="enc_fill_credentials">Введите логин и пароль</string>
    <string name="enc_user_info_title">Информация о пользователе</string>
    <string name="enc_user_info_template">Сайт: %1$s\nЛогин: %2$s\nID пользователя: %3$s\nGUID получен: %4$s\nstoken получен: %5$s\natoken получен: %6$s</string>
    <string name="enc_auth_error">Ошибка авторизации: %1$s</string>
    <string name="enc_unknown">неизвестно</string>
    <string name="engine_current_level">Текущий уровень</string>
    <string name="engine_loading">Загрузка…</string>
    <string name="engine_refresh">Обновить</string>
    <string name="engine_mixed_actions_title">MixedActions</string>
    <string name="engine_mixed_actions_empty">Нет новых действий.</string>
    <string name="engine_pending_code_waiting_template">⏳ %1$s Вы: %2$s (в очереди)</string>
    <string name="engine_pending_code_retry_template">⏳ %1$s Вы: %2$s (нет сети, повтор через 5 сек)</string>
    <string name="engine_mixed_actions_expand">Развернуть MixedActions</string>
    <string name="engine_mixed_actions_collapse">Свернуть MixedActions</string>
    <string name="engine_code_title">Отправка кода в Encounter</string>
    <string name="engine_code_hint">Введите код</string>
    <string name="engine_code_send">Отправить</string>
    <string name="engine_code_empty">Введите код для отправки</string>
    <string name="engine_code_send_error">Не удалось отправить код: %1$s</string>
    <string name="engine_level_header_template">Уровень %1$s из %2$s: %3$s</string>
    <string name="engine_level_header_no_name_template">Уровень %1$s из %2$s</string>
    <string name="engine_sectors_title">Сектора</string>
    <string name="engine_sectors_title_with_stats">Сектора (нужно %1$s из %2$s, еще %3$s)</string>
    <string name="engine_task_title">Задание</string>
    <string name="engine_hints_title">Подсказки</string>
    <string name="engine_bonuses_title">Бонусы</string>
    <string name="engine_bonus_header_template">Бонус %1$s. %2$s</string>
    <string name="engine_bonus_hint_title">Подсказка</string>
    <string name="engine_hint_timer_template">через %1$s сек</string>
    <string name="engine_hint_locked">Подсказка пока недоступна.</string>
    <string name="engine_empty_task">Задание отсутствует.</string>
    <string name="engine_empty_sectors">Секторы отсутствуют.</string>
    <string name="engine_empty_hints">Подсказки отсутствуют.</string>
    <string name="engine_empty_bonuses">Бонусы отсутствуют.</string>
    <string name="engine_empty_hint_text">Текст подсказки отсутствует.</string>
    <string name="engine_empty_bonus_text">Текст бонуса отсутствует.</string>
    <string name="engine_auth_expired_message_with_link">Сессия Encounter истекла. &lt;a href="app://enc-auth"&gt;Перейти к авторизации&lt;/a&gt;</string>
    <string name="engine_need_auth">Сначала авторизуйтесь в Encounter.</string>
    <string name="engine_need_game_id">Укажите ID игры в настройках сервера.</string>
    <string name="engine_level_template">Игра ID: %1$s\nНазвание игры: %2$s\nУровень: %3$s\nНазвание уровня: %4$s\nEvent: %5$s</string>
    <string name="engine_level_error">Не удалось загрузить уровень: %1$s</string>
    <string name="engine_native_load_error">Не удалось открыть движок: %1$s</string>
    <string name="engine_native_load_error_http">Не удалось открыть движок: HTTP %1$d</string>
    <string name="engine_native_ssl_error">Ошибка SSL. Проверьте сертификат сайта Encounter.</string>
    <string name="app_not_available_title">Доступ ограничен</string>
    <string name="app_not_available_message">вам не доступно приложение</string>
    
    <!-- Notification strings -->
    <string name="notification_channel_chat">Сообщения чата</string>
    <string name="notification_channel_chat_description">Уведомления о новых сообщениях в чате</string>
    <string name="notification_chat_title">Новое сообщение в %1$s</string>
    <string name="notification_chat_message">%1$s: %2$s</string>
    
    <!-- Settings strings -->
    <string name="settings_notifications_title">Уведомления</string>
    <string name="settings_chat_notifications">Из чата</string>
    <string name="settings_chat_notifications_summary">Показывать уведомления о новых сообщениях в чате</string>
    
    <!-- Chat retry strings -->
    <string name="chat_action_retry">Повторить отправку</string>
    <string name="message_retry_success">Сообщение отправлено</string>
    <string name="message_retry_failed">Не удалось отправить сообщение</string>
</resources>
