<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/encounterAuthFragment"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_encounter_auth" />
        <item
            android:id="@+id/chatsFragment"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/menu_chats" />
        <item
            android:id="@+id/engineFragment"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_engine" />
        <item
            android:id="@+id/engineNativeFragment"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_engine_native" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/serverSettingsFragment"
            android:icon="@android:drawable/ic_menu_upload"
            android:title="@string/menu_server_settings"
            android:visible="false" />
    </group>
</menu>
